# adv_prjt1

./: .gitignore  jobscript.sh  jobscript_betavae.sh  joscript.sh  pyproject.toml  requirements.txt  run_local.sh
src/prjt1/: MoGPrior.py  ToyData.py  beta_vae_standard.py  compute_fid.py  ddpm.py  fid.py  flow.py  plot_elbo.py  plot_latent_distributions.py  vae_bernoulli.py  vae_bernoulli_flow.py  vae_bernoulli_gauss.py
